--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react": "18.2.0",
     "react-daisyui": "^2.0.6",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.2",
+    "react-hook-form": "^7.34.0",
     "react-icons": "^4.4.0",
     "react-infinite-scroller": "^1.2.6",
     "react-query": "^4.0.0-beta.23",
